# SlicerMONAIAuto3DSeg

./: CMakeLists.txt  LICENSE  README.md  UsingStandardTerminology.md
.github/workflows/: package.yml
MONAIAuto3DSeg/: CMakeLists.txt  MONAIAuto3DSeg.py
MONAIAuto3DSeg/MONAIAuto3DSegLib/: constants.py  dependency_handler.py  log_handler.py  model_database.py  process.py  server.py  utils.py
MONAIAuto3DSeg/MONAIAuto3DSegServer/: main.py
MONAIAuto3DSeg/Resources/: AnatomicRegionAndModifier-MONAIAuto3DSeg.term.json  Models-schema.json  Models.json  SegmentationCategoryTypeModifier-MONAIAuto3DSeg.term.json
MONAIAuto3DSeg/Resources/UI/: MONAIAuto3DSeg.ui
MONAIAuto3DSeg/Scripts/: auto3dseg_segresnet_inference.py  monaibundle_inference.py
MONAIAuto3DSeg/auto3dseg/: main.py
MonaiBundleHome/: CMakeLists.txt  MonaiBundleHome.py
MonaiBundleHome/MonaiBundleHomeLib/: MonaiBundleLogic.py  MonaiBundleWidget.py  PythonDependencyChecker.py  Utils.py  __init__.py
MonaiBundleHome/Resources/UI/: MONAIBundle.ui
MonaiBundleHome/Testing/: MonaiBundleLogicTestCase.py  MonaiBundleWidgetTestCase.py  Utils.py  __init__.py
